Designer 2.13.2 (2012-06-24 Rosemary)
=====================================

Bug fix release:

 - Fixed MODELER-316: Enable gestures to be associated
   with full macro definitions (XML schema change)
 - Fixed MODELER-318: Account management yields an 
   HTTP 500 error
 -


Designer 2.13.1 (2012-06-11 Rosemary)
=====================================

Bug fix release:

 - Templates no longer recreate associated building
   objects when used. Users must explicitly bind UI
   components in templates to their own building
   objects (MODELER-314).
 - Correctly maintains empty button label names
   when read from a template (MODELER-315)


Designer 2.13.0 (2012-06-01 Rosemary)
=====================================

 - Image assets in designs are now handled with
   an image asset manager which allows reuse of
   images across multiple UI components and screens.
 - Archos 7 Tablet supported as a predefined panel 
   in Designer
 - KNX DPT 9.001 support in KNX Import Wizard 
 - Performance improvements of the client side (web browser
   Javascript) code with an improvement data serialization
   mechanism
   

Designer 2.12.0 (2012-05-20 Jura)
=================================

 - Fixes for UI issues where elements in a template
   tree were not shown correctly (MODELER-262, MODELER-281)
 - Multiple elements in the UI designer can be selected
   at the same time (using SHIFT key) for aggregate
   operations
 - Selected elements can be moved with arrow keys instead
   of mouse drag for more precise control (MODELER-272, MODELER-273)
 - UI Designer view has a toolbar for component alignment and 
   sizing functions (MODELER-276, MODELER-278)
 - Fix for an issue with resizing columns in a grid (MODELER-260)
 - Fix for an issue with buttons with empty names recreated
   incorrectly using a default button name with templates
   (MODELER-270)
 - Autosave interval set to 5 minutes.
 - Editing of groups works now (MODELER-283)  


Designer 2.11.3 (2012-03-25 Formosa)